req_counter/kube/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
# метаданные самого деплоймента.
metadata:
  name: req-counter-deployment
spec:
  # Количество реплик пода.
  replicas: 3
  # Селектор, который выбирает
  # какие поды принадлежат этому деплойменту.
  selector:
    matchLabels:
      app: req-counter
  # Шаблон пода,
  # который будет использоваться при
  # маштабировании.
  template:
    # Метаданные пода.
    # тут обычно помещаются лейблы,
    # с помощью которых деплоймент идентифицирует
    # свои поды.
    metadata:
      labels:
        app: req-counter
    spec:
      # Масссив контейнеров
      containers:
        # Название контейнера внутри пода.
      - name: req-counter-app
        # Образ приложения.
        image: s3rius/req-counter-express:latest
        # Ресурсы требуемые для работы приложения.
        resources:
          # Минимальное количество ресурсов,
          # которое кластер гарантированно предоставит приложению.
          # Также данные значения используются для того,
          # чтобы выяснить на какой ноде запускать приложение.
          requests:
            memory: "50Mi"
            cpu: "30m"
          # Максимально возможные значения приложения.
          # Если приложение выйдет за лимиты, 
          # то кубер убьёт приложение.
          limits:
            memory: "128Mi"
            cpu: "100m"
        # Порты на которых открыты приложения.     
        ports:
        - containerPort: 8000
          protocol: TCP
