req_counter/kube/service.yml
---
apiVersion: v1
kind: Service
# Метадата сервиса.
metadata:
  name: req-counter-service
spec:
  # Селектор подов,
  # которым будет пускаться трафик.
  # Трафик может идти в любой под,
  # который матчит данному селектору.
  selector:
    app: req-counter
  # Порты для проксирования соединений.
  ports:
    # Порт сервиса
  - port: 80
    # Порт пода, куда будет идти трафик дальше. 
    targetPort: 8000
